# qmdlr

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Camera.cpp  Camera.h  Editor3D.cpp  Editor3D.h  EditorUV.cpp  EditorUV.h  EnumArray.h  Events.cpp  Events.h  Format.h  Images.cpp  Images.h  Log.cpp  Log.h  MDLRenderer.cpp  MDLRenderer.h  Math.h  ModelData.h  ModelLoader.cpp  ModelLoader.h  ModelMutator.cpp  ModelMutator.h  README.md  Settings.cpp  Settings.h  Stream.h  System.cpp  System.h  TOML.h  Types.h  UI.cpp  UI.h  UVRenderer.cpp  UVRenderer.h  UndoRedo.cpp  UndoRedo.h  (+13 more)
glad/include/glad/: glad.h
glad/src/: glad.c
res/shaders/: model.frag.glsl  model.vert.glsl  normals.vert.glsl  simple.frag.glsl  simple.vert.glsl  ubo.glsl
